--- a/yatube/templates/posts/follow.html
+++ b/yatube/templates/posts/follow.html
@@ -4,30 +4,31 @@
 {% load thumbnail %}
 <div class="container py-5">
   {% include "posts/includes/switcher.html" %}
-    <h1>Последние обновления у авторов</h1>
-    {% for post in page_obj %}
-      <article>
-        <ul>
-          <li>
-            Автор: {{ post.author.get_full_name }}
-          </li>
-          <li>
-            Дата публикации: {{ post.pub_date|date:"d E Y" }}
-          </li>
-        </ul>
-        {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-          <img class="card-img my-2" src="{{ im.url }}">
-        {% endthumbnail %}
-        <p>{{ post.text }}</p>
-        {% if post.group %}
-          <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
-        {% endif %}
-        <p>
-          <a href="{% url 'posts:post_detail' post.pk %}">подробная информация </a>
-        </p>  
-        {% if not forloop.last %}<hr>{% endif %}
-      </article>
-    {% endfor %}
-    {% include "posts/includes/paginator.html" %}
+  <h1>Последние обновления у авторов</h1>
+  {% for post in page_obj %}
+  <article>
+    <ul>
+      <li>
+        Автор: {{ post.author.get_full_name }}
+      </li>
+      <li>
+        Дата публикации: {{ post.pub_date|date:"d E Y" }}
+      </li>
+    </ul>
+    {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+    <img class="card-img my-2" src="{{ im.url }}">
+    {% endthumbnail %}
+    <p>{{ post.text }}</p>
+    {% if post.group %}
+    <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
+    {% endif %}
+    <p>
+      <a href="{% url 'posts:post_detail' post.pk %}">подробная информация </a>
+    </p>
+    {% if not forloop.last %}
+    <hr>{% endif %}
+  </article>
+  {% endfor %}
+  {% include "posts/includes/paginator.html" %}
 </div>
 {% endblock content %}
