--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -8,24 +8,25 @@
     {{group.description}}
   </p>
   {% for post in page_obj %}
-    <article>
-      <ul>
-        <li>
-          Автор: {{ post.author.get_full_name }}
-        </li>
-        <li>
-          Дата публикации: {{ post.pub_date|date:"d E Y" }}
-        </li>
-      </ul>
-      <p>
-        {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-          <img class="card-img my-2" src="{{ im.url }}">
-        {% endthumbnail %}
-        {{ post.text }}
-      </p>
-      {% if not forloop.last %}<hr>{% endif %}
-    </article>
+  <article>
+    <ul>
+      <li>
+        Автор: {{ post.author.get_full_name }}
+      </li>
+      <li>
+        Дата публикации: {{ post.pub_date|date:"d E Y" }}
+      </li>
+    </ul>
+    <p>
+      {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+      <img class="card-img my-2" src="{{ im.url }}">
+      {% endthumbnail %}
+      {{ post.text }}
+    </p>
+    {% if not forloop.last %}
+    <hr>{% endif %}
+  </article>
   {% endfor %}
   {% include "posts/includes/paginator.html" %}
 </div>
-{% endblock content %} 
+{% endblock content %}
