--- a/yatube/templates/users/password_reset_confirm.html
+++ b/yatube/templates/users/password_reset_confirm.html
@@ -2,7 +2,7 @@
 {% block title %}Новый пароль{% endblock title %}
 {% block content %}
 {% if validlink %}
-<div class="container py-5"> 
+<div class="container py-5">
   <div class="row justify-content-center">
     <div class="col-md-8 p-5">
       <div class="card">
@@ -11,41 +11,43 @@
         </div>
         <div class="card-body">
           {% if form.errors %}
-              {% for field in form %}
-                {% for error in field.errors %}            
-                  <div class="alert alert-danger">
-                    {{ error|escape }}
-                  </div>
-                {% endfor %}
-              {% endfor %}
-              {% for error in form.non_field_errors %}
-                <div class="alert alert-danger">
-                  {{ error|escape }}
-                </div>
-              {% endfor %}
+          {% for field in form %}
+          {% for error in field.errors %}
+          <div class="alert alert-danger">
+            {{ error|escape }}
+          </div>
+          {% endfor %}
+          {% endfor %}
+          {% for error in form.non_field_errors %}
+          <div class="alert alert-danger">
+            {{ error|escape }}
+          </div>
+          {% endfor %}
           {% endif %}
-          <form method="post"
-            {% if action_url %}
-              action="{% url action_url %}"
-            {% endif %}
-          >
+          <form method="post" {% if action_url %} action="{% url action_url %}" {% endif %}>
             {% csrf_token %}
             <div class="form-group row my-3 p-3">
               <label for="id_new_password1">
-                Новый пароль        
-                <span class="required text-danger">*</span>        
-              </label>    
-              <input type="password" name="new_password1" class="form-control" required id="id_new_password1">      
+                Новый пароль
+                <span class="required text-danger">*</span>
+              </label>
+              <input type="password" name="new_password1" class="form-control" required id="id_new_password1">
               <small id="id_new_password1-help" class="form-text text-muted">
-                <ul><li>Ваш пароль не должен совпадать с вашим именем или другой персональной информацией или быть слишком похожим на неё.</li><li>Ваш пароль должен содержать как минимум 8 символов.</li><li>Ваш пароль не может быть одним из широко распространённых паролей.</li><li>Ваш пароль не может состоять только из цифр.</li></ul>
-              </small>      
+                <ul>
+                  <li>Ваш пароль не должен совпадать с вашим именем или другой персональной информацией или быть слишком
+                    похожим на неё.</li>
+                  <li>Ваш пароль должен содержать как минимум 8 символов.</li>
+                  <li>Ваш пароль не может быть одним из широко распространённых паролей.</li>
+                  <li>Ваш пароль не может состоять только из цифр.</li>
+                </ul>
+              </small>
             </div>
             <div class="form-group row my-3 p-3">
               <label for="id_new_password2">
-                Подтверждение нового пароля        
-                <span class="required text-danger">*</span>        
-              </label>    
-              <input type="password" name="new_password2" class="form-control" required id="id_new_password2">      
+                Подтверждение нового пароля
+                <span class="required text-danger">*</span>
+              </label>
+              <input type="password" name="new_password2" class="form-control" required id="id_new_password2">
             </div>
             <div class="col-md-6 offset-md-4">
               <button type="submit" class="btn btn-primary">
@@ -57,7 +59,7 @@
       </div>
     </div>
   </div>
-{% else %}
+  {% else %}
   <div class="row justify-content-center">
     <div class="col-md-8 p-5">
       <div class="card">
