--- a/yatube/templates/users/password_reset_form.html
+++ b/yatube/templates/users/password_reset_form.html
@@ -1,26 +1,22 @@
 {% extends 'base.html' %}
 {% block title %}Сброс пароля{% endblock title %}
 {% block content %}
-<div class="container py-5"> 
+<div class="container py-5">
   <div class="row justify-content-center">
     <div class="col-md-8 p-5">
       <div class="card">
         <div class="card-header">
           Чтобы сбросить старый пароль — введите адрес электронной почты, под которым вы регистрировались
         </div>
-        <div class="card-body"> 
-          <form method="post"
-            {% if action_url %}
-              action="{% url action_url %}"
-            {% endif %}
-          >
+        <div class="card-body">
+          <form method="post" {% if action_url %} action="{% url action_url %}" {% endif %}>
             {% csrf_token %}
-            
+
             <div class="form-group row my-3 p-3">
               <label for="id_email">
                 Адрес электронной почты
                 <span class="required text-danger">*</span>
-              </label>    
+              </label>
               <input type="email" name="email" maxlength="254" class="form-control" required id="id_email">
             </div>
             <div class="col-md-6 offset-md-4">
@@ -32,6 +28,6 @@
         </div>
       </div>
     </div>
-  </div>  
+  </div>
 </div>
 {% endblock content %}
