--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -9,28 +9,32 @@
   {% include "posts/includes/switcher.html" %}
   <h1>Последние обновления на сайте</h1>
   {% for post in page_obj %}
-  <article>
-    <ul>
-      <li>
-        Автор: {{ post.author.get_full_name }}
-      </li>
-      <li>
-        Дата публикации: {{ post.pub_date|date:"d E Y" }}
-      </li>
-    </ul>
-    {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-    <img class="card-img my-2" src="{{ im.url }}">
-    {% endthumbnail %}
-    <p>{{ post.text }}</p>
-    {% if post.group %}
-    <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
-    {% endif %}
-    <p>
-      <a href="{% url 'posts:post_detail' post.pk %}">подробная информация </a>
-    </p>
-    {% if not forloop.last %}
-    <hr>{% endif %}
-  </article>
+  <div class="row my-3"></div>
+  <div class="card">
+    <article>
+      <ul>
+        <li>
+          Автор: {{ post.author.get_full_name }}
+        </li>
+        <li>
+          Дата публикации: {{ post.pub_date|date:"d E Y" }}
+        </li>
+      </ul>
+      {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+      <img class="card-img my-2" src="{{ im.url }}">
+      {% endthumbnail %}
+      <p>{{ post.text }}</p>
+      {% if post.group %}
+      <p>
+        <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы "{{ post.group }}"</a>
+      </p>
+      {% endif %}
+      <p>
+        <a href="{% url 'posts:post_detail' post.pk %}">подробная информация</a>
+      </p>
+    </article>
+  </div>
+  <div class="row my-3"></div>
   {% endfor %}
   {% include "posts/includes/paginator.html" %}
 </div>
